# NaturalLanguageProcessingLabs

./: .gitignore  CMakeLists.txt  README.md
lab1/: .gitignore
lab1/bigram/: bigram.py  unk_bigram.py
lab1/dataset/: README.md
lab1/dic/: gen_bi_dic.py  gen_dic.py
lab1/evaluate/: evaluate.py
lab1/hashmap/: hashmap.c  hashmap.h
lab1/max_match/: main.c  max_match.c  max_match.h  max_match_fast.c  max_match_fast.h  max_match_threaded.c  max_match_threaded.h  timer.h
lab1/stack/: stack.c  stack.h
lab1/string/: str.c  str.h
lab1/unigram/: unigram.py
lab2/: clue2char.py  evaluate.py  evaluating.py  lab2.ipynb  ner-me.py
report/lab1/: acl2020.bib  acl2020.tex  sec0-abstract.tex  sec1-related-works.tex  sec2-structure.tex  sec3-process.tex  sec4-conclusion.tex  sec5-appendix.tex
report/template/: README.md  acl2020.bib  acl2020.tex
